src-ken&y/objects/Receiving_Document__c.object
<CustomObject>
    <customHelpPage>HelpReceivingDocument</customHelpPage>
    <description>Receiving Document - Advanced Shipment Notice - ASN</description>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <description>Carrier delivering shipment</description>
        <inlineHelpText>Carrier delivering the shipment.</inlineHelpText>
        <label>Carrier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Receiving Documents</relationshipLabel>
        <relationshipName>Advanced_Shipment_Notice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Receiving Document Currency</relationshipLabel>
        <relationshipName>Receiving_Document_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Receiving Documents</relationshipLabel>
        <relationshipName>Receiving_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date Advanced Shipment Noitce was created</description>
        <label>Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Expected__c</fullName>
        <description>Date shipment is expected to arrive</description>
        <label>Date Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>Date and Time receipt occured</description>
        <label>Date Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finalized Flag is set to true when the record is ready for accounting</description>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized_hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DO NOT PUT on page layout, it is hidden field to control user click.</description>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Boxes__c</fullName>
        <description>Number of boxes in shipment</description>
        <label>Number of Boxes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Slip_Number__c</fullName>
        <description>Packing Slip Number</description>
        <label>Packing Slip Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Automation considers records which have Ready == true</description>
        <inlineHelpText>A checkmark indicates that the record is eligible for process automation.</inlineHelpText>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Receiving Document Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Supplier</description>
        <label>Purchase From Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Receiving Documents (Supplier)</relationshipLabel>
        <relationshipName>Receiving_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Lines__c</fullName>
        <label>Total Number of Lines</label>
        <summaryForeignKey>Receipt_Line__c.Receiving_Document__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <description>Carrier&apos;s tracking number</description>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency</description>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <inlineHelpText>Transaction date. The date can be populated from a source document using a workflow.</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Logical</fullName>
                </value>
                <value>
                    <fullName>In-Transit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Receiving Document</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miscellaneous Receipt</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Return Receipt</fullName>
                </value>
                <value>
                    <fullName>Advanced Shipment Notice</fullName>
                </value>
                <value>
                    <fullName>Purchase Order Receipt</fullName>
                </value>
                <value>
                    <fullName>Receipt into In-Transit</fullName>
                </value>
                <value>
                    <fullName>In-Transit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Void_Date__c</fullName>
        <label>Void Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Receiving Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Company__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Supplier__c</columns>
        <columns>Carrier__c</columns>
        <columns>Tracking_Number__c</columns>
        <columns>Packing_Slip_Number__c</columns>
        <columns>Number_of_Boxes__c</columns>
        <columns>Date_Expected__c</columns>
        <columns>Date_Received__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Receiving Document</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Receiving Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cancelled_not_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Status__c) == &apos;Cancelled&apos; &amp;&amp; Finalized__c</errorConditionFormula>
        <errorDisplayField>Finalized__c</errorDisplayField>
        <errorMessage>You cannot Finalize a Receiving Document that has been cancelled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>Company cannot change once the record has been created</description>
        <errorConditionFormula>NOT( 
  ISNULL( PRIORVALUE(Company__c) ) || 
  ISBLANK( PRIORVALUE(Company__c) )
) 
&amp;&amp; 
ISCHANGED(Company__c)</errorConditionFormula>
        <errorMessage>Once created for a Company,  Receiving Document cannot change Company.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_cannot_chage</fullName>
        <active>false</active>
        <description>Type is system maintained</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>Type is system maintained.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Void_and_Finalized</fullName>
        <active>true</active>
        <errorConditionFormula>Void__c &amp;&amp; !Finalized__c</errorConditionFormula>
        <errorMessage>This Receiving Document must be Finalized in order to Void</errorMessage>
    </validationRules>
</CustomObject>